--- a/detail-respon.html
+++ b/detail-respon.html
@@ -24,16 +24,18 @@
 
   <body class="body-details">
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav">
+    <nav class="nav-menu navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav" style="height: 76px;">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo.png"></a>
             <p class="logo-caption">Scholarship showroom</p>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- Dropdown -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
+
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle nav-link2 js-scroll-trigger" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
                             <li><a class="drop-selector" href="#">English</a></li>
@@ -57,7 +59,7 @@
           <div class="row">
             <div class="col-8 col-lg-8">
               <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;<strong>Posted</strong> : 1 ตุลาคม 2560</p>
-              <p class="orange">จำนวนเงิน</p><p>34,000 บาท</p>
+              <p class="orange">จำนวนเงิน</p><p style="display: inline-block;">34,000 บาท</p>
             </div>
             <div class="col-4 col-lg-4">
               <p class="orange-details">ระยะเวลาการขอรับทุน</p>
@@ -104,7 +106,7 @@
       <!-- End Left & Middle part -->
       <!-- Right part -->
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-          <a class="back-detail" href="#">&lt; กลับสู่หน้าค้นหา</a>
+          <a class="back-detail" href="file:///C:/xampp/htdocs/sharescholarship/2cards.html#">&lt; กลับสู่หน้าค้นหา</a>
           <div class="list-group">
             <p></p>
             <p>ทุนที่ลักษณะคล้ายกัน</p>
@@ -223,6 +225,8 @@
     <script src="js/offcanvas.js"></script>
     <!-- Go to top -->
     <script src="js/gototop.js"></script>
+    <!-- Custom JS -->
+    <script src="js/script.js"></script>
 
   </body>
 </html>
