--- a/home-2.html
+++ b/home-2.html
@@ -65,38 +65,6 @@
         </div>
     </nav>
 
-    <!--
-    <div class="nav-menu fixed-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="home.html"><img src="images/logo2.png" style="height:70px" class="img-fluid" alt="logo"></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-                        <div class="collapse navbar-collapse" id="navbar">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="nav-item"> <a class="nav-link active" href="#home">หน้าแรก <span class="sr-only">(current)</span></a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#">ค้นหาทุน </a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#">ติดต่อ</a> </li>
-                                <li class="nav-item">
-
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                            ภาษาไทย
-                                    </a>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">ภาษาไทย</a>
-                                        <a class="dropdown-item" href="#">English</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </div>
--->
-
     <header id="home" class="bg-gradient" style="background: url('images/kmutt building.png') top center no-repeat; background-size: cover;">
         <div class="container mt-3">
             <div class="container">
@@ -134,7 +102,6 @@
 
     </div>
     <!-- // end .section -->
-
     <div class="section light-bg" id="find_scholars" style="padding:0px; background: url('images/kmutt building.png') bottom center no-repeat; background-size: cover;">
         <!--<div class="bgRegHalf">-->
         <div class="container">
@@ -147,7 +114,7 @@
                         <div id="lines"></div>
                         <div id="lines2"></div>
                         <p><br></p>
-                        <h3>กรอกข้อมูลส่วนตัว</h3>
+                        <h3 style="padding-top: 5%;">กรอกข้อมูลส่วนตัว</h3>
                     </div>
 
                     <form action="#" class="clearfix">
@@ -292,8 +259,8 @@
 
                                     <div style="position: absolute; bottom: 2rem; right: 2rem; padding-top:20px;">
                                         <!--<span class="ti-angle-left"></span>-->
-                                        <a id="student-back"> ย้อนกลับ</a>
-                                        <button class="btn btn-primary my-2 my-sm-0" type="submit">ส่งคำตอบ </button>
+                                        <a id="student-back" class="skip"> ย้อนกลับ</a>
+                                        <button class="btn btn-outline-success2 my-2 my-sm-0" type="submit">ส่งคำตอบ </button>
                                     </div>
                                 </div>
                             </div>
@@ -332,10 +299,10 @@
                                     </div>
 
                                     <div style="position: absolute; bottom: 2rem; right: 2rem; padding-top:20px;">
-                                        <!--<span class="ti-angle-left"></span>-->
                                         <a id="parent-back"> ย้อนกลับ</a>
                                         <button class="btn btn-primary my-2 my-sm-0" type="submit">ส่งคำตอบ </button>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
@@ -348,7 +315,7 @@
 
     <div class="light-bg py-5" id="contact">
         <div class="container">
-            <div class="row">
+            <div class="row" style="padding-top: 7%;">
                 <div class="col-lg-6">
                     <div>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.097290879398!2d100.49282151398339!3d13.651845390412218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a251bb6b0cf1%3A0xf656e94ff13324ad!2sKing+Mongkut&#39;s+University+of+Technology+Thonburi!5e0!3m2!1sen!2sth!4v1514469635144"
