--- a/2cards.html
+++ b/2cards.html
@@ -25,38 +25,38 @@
   <body class="body-cards">
     <header">
       <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-gray fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
-        <p class="logo-caption">Scholarship showroom</p>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link2 menu-index" href="#">ทั้งหมด</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link2 menu-index" href="#">ปริญญาตรี</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link2 menu-index" href="#">ปริญญาโท</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link2 menu-index" href="#">ปริญญาเอก</a>
-            </li>
-            <li class="dropdown">
-            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
-              <li><a class="drop-selector" href="#">English</a></li>
-            </ul>
-          </li>
-          </ul>
+      <nav class="nav-menu navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav" style="height: 76px;">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo.png"></a>
+            <p class="logo-caption">Scholarship showroom</p>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link2 menu-index" href="#">ทั้งหมด</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link2 menu-index" href="#">ปริญญาตรี</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link2 menu-index" href="#">ปริญญาโท</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link2 menu-index" href="#">ปริญญาเอก</a>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
+                    <li><a class="drop-selector" href="#">English</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
         </div>
-      </div>
-    </nav>
+      </nav>
     </header> <!-- #header end -->
 
     <div class="container-fluid">
@@ -131,17 +131,17 @@
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10"> 
           <section class="row text-center" style="padding: 0;">
             <div class="col-md-4 col-sm-3 placeholder">
-              <p class="orange">ทุนการศึกษาอื่นๆ</p><p>10 ผลลัพธ์</p>
+              <p class="orange">ทุนการศึกษาอื่นๆ</p><p style="display: inline-block;">10 ผลลัพธ์</p>
             </div>
             <div class="col-md-4 col-sm-3 placeholder"></div>
             <div class="col-md-4 col-sm-3 placeholder">
-              <a class="back-detail" style="float: left;" href="#">&lt; กลับสู่หน้าค้นหา</a>
+              <a class="back-detail" style="float: left;" href="file:///C:/xampp/htdocs/sharescholarship/home-2.html">&lt; กลับสู่หน้าค้นหา</a>
               <ul class="nav nav-tabs" role="tablist" style="padding-left: 5%;">
                 <li class="nav-item">
-                  <a class="nav-link active" data-toggle="tab" href="#home" role="tab"><i class="fa fa-th-large bar-list"></i></a>
+                  <a class="nav-link-tab-2 active" data-toggle="tab" href="#home" role="tab"><i class="fa fa-th-large bar-list"></i></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#profile" role="tab"><i class="fa fa-bars bar-list"></i></a>
+                  <a class="nav-link-tab-2" data-toggle="tab" href="#profile" role="tab"><i class="fa fa-bars bar-list"></i></a>
                 </li>
               </ul>
             </div>
@@ -154,7 +154,7 @@
               <div class="row cards-section">
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card"  href="file:///C:/xampp/htdocs/sharescholarship/detail-respon.html#">
                     <span class="topcard" id="orange-gradient">
                       <p class="details-header p-responsive">ทุนการศึกษาเอสโซ่</p>
                       <p class="name-details-caption p-responsive">สมโภชกรุงรัตนโกสินทร์ 200 ปี</p>
@@ -350,5 +350,7 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- Go to top -->
     <script src="js/gototop.js"></script>
+    <!-- Custom JS -->
+    <script src="js/script.js"></script>
   </body>
 </html>
