--- a/2cards.html
+++ b/2cards.html
@@ -34,18 +34,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link2 menu-index" href="#">ทั้งหมด</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link2 menu-index" href="#">ปริญญาตรี</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link2 menu-index" href="#">ปริญญาโท</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link2 menu-index" href="#">ปริญญาเอก</a>
-                </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย<b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -62,6 +50,28 @@
     <div class="container-fluid">
       <div class="row">
         <nav class="col-sm-3 col-md-2 d-none d-sm-block" style="padding-left: 3%; padding-right: 0;">
+          <h5>ระดับการศึกษา</h5>
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator-1"></span>
+              <span class="custom-control-description">ทั้งหมด</span>
+            </label>
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator-1"></span>
+              <span class="custom-control-description">ปริญญาตรี</span>
+            </label>
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator-1"></span>
+              <span class="custom-control-description">ปริญญาโท</span>
+            </label>
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator-1"></span>
+              <span class="custom-control-description">ปริญญาเอก</span>
+            </label>
+          <hr class="featurette-divider">
           <h5>เงื่อนไขพิเศษ</h5>
             <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
@@ -130,13 +140,10 @@
         </nav>
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10"> 
           <section class="row text-center" style="padding: 0;">
-            <div class="col-md-4 col-sm-3 placeholder">
-              <p class="orange">ทุนการศึกษาอื่นๆ</p><p style="display: inline-block;">10 ผลลัพธ์</p>
-            </div>
-            <div class="col-md-4 col-sm-3 placeholder"></div>
+            <div class="col-md-8 col-sm-12 placeholder"></div>
             <div class="col-md-4 col-sm-3 placeholder">
               <a class="back-detail" style="float: left;" href="file:///C:/xampp/htdocs/sharescholarship/home-2.html">&lt; กลับสู่หน้าค้นหา</a>
-              <ul class="nav nav-tabs" role="tablist" style="padding-left: 5%;">
+              <ul class="nav nav-tabs" role="tablist" style="padding-left: 5%; margin-bottom: 1rem;">
                 <li class="nav-item">
                   <a class="nav-link-tab-2 active" data-toggle="tab" href="#home" role="tab"><i class="fa fa-th-large bar-list"></i></a>
                 </li>
@@ -145,10 +152,14 @@
                 </li>
               </ul>
             </div>
+
         <!-- Tab -->
-        <div class="tab-content">
+        <div class="tab-content" style="width: 95%;">
           <!-- Tab for card -->
           <div class="tab-pane active" id="home" role="tabpanel">
+            <div class="col-md-4 col-sm-3 placeholder">
+              <p class="orange">ทุนการศึกษาอื่นๆ</p><p style="display: inline-block;">10 ผลลัพธ์</p>
+            </div>
             <!-- Head -->
             <div class="col-md-12 placeholder type">
               <div class="row cards-section">
@@ -250,6 +261,38 @@
                     </span>
                   </a>
                 </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
+                  <a class="card"  href="#">
+                    <span class="topcard" id="orange-gradient">
+                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="name-details-caption p-responsive">กยศ.</p>
+                    </span>
+                    <span class="bg-logo">
+                      <img class="img-fluid" src="images/kys.jpg">
+                    </span>
+                    <span class="caption-details d-responsive text-left">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                    </span>
+                  </a>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
+                  <a class="card"  href="#">
+                    <span class="topcard" id="orange-gradient">
+                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="name-details-caption p-responsive">กยศ.</p>
+                    </span>
+                    <span class="bg-logo">
+                      <img class="img-fluid" src="images/kys.jpg">
+                    </span>
+                    <span class="caption-details d-responsive text-left">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                    </span>
+                  </a>
+                </div>
                 <!-- End Cards -->
 
               </div> <!-- Row card section end -->
@@ -257,6 +300,9 @@
           </div>  <!-- Tab for card end --> 
           <!-- Tab for list -->
           <div class="tab-pane" id="profile" role="tabpanel" style="padding-left: 5%;">
+            <div class="col-md-4 col-sm-3 placeholder">
+              <p class="orange" style="float: left;">ผลการค้นหา</p><p style="display: inline-block;">10 ผลลัพธ์</p>
+            </div>
             <div class="table100 ver5 m-b-11 d-none d-sm-block" style="padding-left: 10px;">
               <!-- Head table -->
               <div class="table100-head">
@@ -323,6 +369,23 @@
                       <td class="cell100 column4">23 ส.ค. - 14 ก.ย. 2560</td>
                       <td class="cell100 column5">10,000 บาท</td>
                     </tr>
+
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนการศึกษาเอสโซ่<br>สมโภชกรุงรัตนโกสินทร์ 200 ปี</td>
+                      <td class="cell100 column2">ทุกคณะ</td>
+                      <td class="cell100 column3">ทุนให้เปล่า</td>
+                      <td class="cell100 column4">23 ส.ค. - 14 ก.ย. 2560</td>
+                      <td class="cell100 column5">10,000 บาท</td>
+                    </tr>
+
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนการศึกษาเอสโซ่<br>สมโภชกรุงรัตนโกสินทร์ 200 ปี</td>
+                      <td class="cell100 column2">ทุกคณะ</td>
+                      <td class="cell100 column3">ทุนให้เปล่า</td>
+                      <td class="cell100 column4">23 ส.ค. - 14 ก.ย. 2560</td>
+                      <td class="cell100 column5">10,000 บาท</td>
+                    </tr>
+
                   </tbody>
                 </table>
               </div>
@@ -337,8 +400,27 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="container">
       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-up" style="font-size: 150%;" aria-hidden="true"></i></button>
+
+    <footer class="foot" style="margin-top: 1rem;">
+    <div class="container">
+      <div class="row">
+        <div class="col col-lg-2 d-none d-lg-block">
+          <p class="phone">02-939393</p>
+        </div>
+        <div class="col-12 col-md-auto foot-padding">
+          <a href="#" class="fa fa-facebook icons-2"></a>
+          <a href="#" class="fa fa-twitter icons-2"></a>
+          <a href="#" class="fa fa-google icons-2"></a>
+          <a href="#" class="fa fa-linkedin icons-2"></a>
+        </div>
+        <div class="col d-none d-lg-block">
+
+          <p class="feedback" style="float: right; padding-right: 9%;">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
+        </div>
+        </div>
+      </div>
+    </div>
     </footer>
 
     <!-- Bootstrap core JavaScript
