--- a/detail-respon.html
+++ b/detail-respon.html
@@ -52,18 +52,18 @@
         <div class="col-12 col-md-9">
           <p class="float-right d-md-none">
             <!-- Toggle when small screen size -->
-            <button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Toggle nav</button>
+            <button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Playlists</button>
           </p>
           <h3>ทุนเพชรพระจอมเกล้าปริญญาตรี</h3>
           <p><strong>Sponsor</strong> : มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี</p>
           <div class="row">
-            <div class="col-8 col-lg-8">
+            <div class="col-12 col-lg-6">
               <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;<strong>Posted</strong> : 1 ตุลาคม 2560</p>
               <p class="orange">จำนวนเงิน</p><p style="display: inline-block;">34,000 บาท</p>
             </div>
-            <div class="col-4 col-lg-4">
-              <p class="orange-details">ระยะเวลาการขอรับทุน</p>
-              <p>1 ต.ค. - 2 พ.ย. 2560</p>
+            <div class="col-12 col-lg-6" style="margin-bottom: 1rem;">
+              <p class="orange">ระยะเวลาการขอรับทุน</p><p style="display: inline-block;">1 ต.ค. - 2 พ.ย. 2560</p>
+              <a class="orange-download" href="#">ดาวน์โหลดเอกสาร</a>
             </div>
           </div>
 
@@ -105,7 +105,7 @@
         </div><!--/span-->
       <!-- End Left & Middle part -->
       <!-- Right part -->
-        <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
+        <div class="col-12 col-md-3 sidebar-offcanvas" id="sidebar">
           <a class="back-detail" href="file:///C:/xampp/htdocs/sharescholarship/2cards.html#">&lt; กลับสู่หน้าค้นหา</a>
           <div class="list-group">
             <p></p>
@@ -150,19 +150,19 @@
               <div class="col-12 col-md-6">
                 <img src="images/1.jpg" class="img-fluid img-radius linear-img-right img-p" alt="Responsive image">
               </div>
-              <div class="col-6 set-text">
-                <p class="text-left text-middle-left d-none d-md-block">นักศึกษาทุนเพชรพระจอมเกล้า<br>
-ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม<br>
-ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม<br>สมกับเป็นนักศึกษาของมหาวิทยาลัย<br>
+              <div class="col-12 col-md-6 set-text">
+                <p class="text-left text-middle-left">นักศึกษาทุนเพชรพระจอมเกล้า
+ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม
+ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวมสมกับเป็นนักศึกษาของมหาวิทยาลัย
 เทคโนโลยีพระจอมเกล้าธนบุรี</p>
               </div>
             </div>
 
             <div class="row justify-content-start">
-              <div class="col-6 set-text">
-                <p class="text-right text-middle-right d-none d-md-block">นักศึกษาทุนเพชรพระจอมเกล้า<br>
-ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม<br>
-ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม<br>สมกับเป็นนักศึกษาของมหาวิทยาลัย<br>
+              <div class="col-12 col-md-6 set-text">
+                <p class="text-right text-middle-right">นักศึกษาทุนเพชรพระจอมเกล้า
+ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม
+ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม สมกับเป็นนักศึกษาของมหาวิทยาลัย
 เทคโนโลยีพระจอมเกล้าธนบุรี</p>
               </div>
               <div class="col-12 col-md-6">
@@ -174,10 +174,10 @@
               <div class="col-12 col-md-6">
                 <img src="images/1.jpg" class="img-fluid img-radius linear-img-right img-p" alt="Responsive image">
               </div>
-              <div class="col-6 set-text">
-                <p class="text-left text-middle-left d-none d-md-block">นักศึกษาทุนเพชรพระจอมเกล้า<br>
-ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม<br>
-ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม<br>สมกับเป็นนักศึกษาของมหาวิทยาลัย<br>
+              <div class="col-12 col-md-6 set-text">
+                <p class="text-left text-middle-left">นักศึกษาทุนเพชรพระจอมเกล้า
+ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม
+ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม สมกับเป็นนักศึกษาของมหาวิทยาลัย
 เทคโนโลยีพระจอมเกล้าธนบุรี</p>
               </div>
               <div id="lines3"></div>
@@ -188,6 +188,8 @@
 
         </div><!--/row-->
       </div>
+
+
     </main><!--/.container-->
 
     <!-- Go to top button -->
@@ -227,6 +229,5 @@
     <script src="js/gototop.js"></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
-
   </body>
 </html>
