--- a/2cards.html
+++ b/2cards.html
@@ -48,8 +48,13 @@
     </header> <!-- #header end -->
 
     <div class="container-fluid">
-      <div class="row">
-        <nav class="col-sm-3 col-md-2 d-none d-sm-block" style="padding-left: 3%; padding-right: 0;">
+      <div class="row row-offcanvas row-offcanvas-left">
+        <p class="float-left d-md-none">
+            <!-- Toggle when small screen size -->
+            <button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Playlists</button>
+          </p>
+        
+        <div class="col-sm-3 col-md-2 sidebar-offcanvas" id="sidebar" style="padding-left: 3%; padding-right: 0;">
           <h5>ระดับการศึกษา</h5>
             <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
@@ -137,7 +142,7 @@
               <span class="custom-control-indicator-1"></span>
               <span class="custom-control-description">ทุนให้เปล่า</span>
             </label>
-        </nav>
+        </div>
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10"> 
           <section class="row text-center" style="padding: 0;">
             <div class="col-md-8 col-sm-12 placeholder"></div>
@@ -397,6 +402,7 @@
 
 
       </div> <!-- row end -->
+    </div>
     </div>
 
     <!-- FOOTER -->
