--- a/detail-respon.html
+++ b/detail-respon.html
@@ -106,9 +106,8 @@
       <!-- End Left & Middle part -->
       <!-- Right part -->
         <div class="col-12 col-md-3 sidebar-offcanvas" id="sidebar">
-          <a class="back-detail" href="file:///C:/xampp/htdocs/sharescholarship/2cards.html#">&lt; กลับสู่หน้าค้นหา</a>
+          <a class="back-detail d-none d-sm-block" href="file:///C:/xampp/htdocs/sharescholarship/2cards.html#">&lt; กลับสู่หน้าค้นหา</a>
           <div class="list-group">
-            <p></p>
             <p>ทุนที่ลักษณะคล้ายกัน</p>
             <button class="buttonLists"><span>ทุนการศึกษาเอสโซ่ </span><p class="caption">สมโภชกรุงรัตนโกสินทร์ 200 ปี</p></button>
             <button class="buttonLists"><span>ทุนบุณรอด </span></button>
@@ -199,6 +198,9 @@
               <div class="col-12 col-md-6">
                 <img src="images/1.jpg" class="img-fluid img-radius linear-img-left img-p" alt="Responsive image">
               </div>
+             <!--  <div class="col-12 d-none d-lg-block">
+                
+              </div> -->
             </div>
             
             <div class="row justify-content-start">
